pull in edbrands and feed from fireplace bower (bug 1087037)

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ src/media/imgurls.txt
 src/media/include.css
 src/media/include.js
 src/media/js/commonplace
+src/media/js/edbrands.js
+src/media/js/feed.js
 src/media/js/include.js
 src/media/js/l10n.js
 src/media/js/views.js
