--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-stylus": "1.3.3",
     "gulp-uglify": "1.0.1",
     "gulp-util": "3.0.x",
+    "gulp-watch": "1.1.0",
     "gulp-webserver": "0.8.3",
     "merge-stream": "0.1.6",
     "require-dir": "0.1.0",
