api cdn off by default (bug 1094768)

--- a/src/media/js/settings_local.js.dist
+++ b/src/media/js/settings_local.js.dist
@@ -1,6 +1,9 @@
 define('settings_local', [], function() {
     // Override settings here!
     return {
+        // Remove this if you want to have data fetched from the CDN rather
+        // than directly from the API.
+        api_cdn_whitelist: {},
         api_url: 'https://marketplace-dev.allizom.org',
         media_url: 'https://marketplace-dev-cdn.allizom.org/media/'
     };
