--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "marketplace-constants": "0.6.0",
     "marketplace-core-modules": "2.1.0",
-
     "almond": "0.2.9",
     "jquery": "2.0.2",
     "requirejs": "2.1.4",
     "underscore": "1.4.4"
+  },
+  "devDependencies": {
+    "squire": "~0.2.0"
   }
 }
